Docker for development

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,5 @@
+
+
 # Logs
 logs
 *.log
@@ -104,3 +106,15 @@ dist
 
 # TernJS port file
 .tern-port
+
+# mongodb
+./.mongodb
+# for all code you usually don't want .git history in image, just the current commit you have checked out
+.git
+
+# you usually don't want dockerfile and compose files in the image either
+*Dockerfile*
+*docker-compose*
+
+# for Node.js apps, you want to build the node_modules in the image, and not copy from host
+node_modules
