Update structure: - Changes on prettier configuration - Changes on eslint configuration - Changes on stylelint configuration - Add Styled-components - Update dockerfile to work on dev environment - Update docker-compose for the app service

--- a/.babelrc
+++ b/.babelrc
@@ -35,8 +35,7 @@
               "@containers": "./src/containers",
               "@definitions": "./src/definitions",
               "@redux": "./src/redux",
-              "@styles": "./src/styles",
-              "@test": "./src/test"
+              "@styles": "./src/styles"
             }
           }
         ]
