--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,15 @@
 version: '3.8'
 
 services:
-  base: &base
-    build: .
-    environment:
-      - DATABASE_COLLECTION_NAME
-      - DATABASE_NAME
-      - DATABASE_URL
-      - NODE_ENV
-      - PORT
-    ports:
-      - '${PORT}:${PORT}'
-
   app:
-    <<: *base
+    env_file:
+      - .env
     build:
-      context: ./
+      context: .
       dockerfile: ./Dockerfile
       target: dev
-    volumes:
-      - ./:/app
-      - /app/node_modules
-    depends_on:
-      - mongodb
-  mongodb:
-    image: mongo
-    container_name: mongodb
-    environment:
-      - PUID=1000
-      - PGID=1000
-    restart: unless-stopped
-    volumes:
-      - ./.mongodb:/data/db
     ports:
-      - 27017:27017
+      - '3000:3000'
+    volumes:
+      - .:/usr/app:delegated
+      - /usr/app/node_modules
