--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "mongodb": "^3.6.4",
     "next": "10.0.8",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
@@ -8,20 +9,19 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
-    "styled-components": "^5.2.1",
-    "svg-sprite-loader": "^5.2.1"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.20",
+    "@types/mongodb": "^3.6.9",
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.8",
-    "@types/svg-sprite-loader": "^3.9.2",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "babel-core": "^6.26.3",
@@ -40,18 +40,15 @@
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-unfetch": "^3.1.0",
     "jest": "^26.6.3",
-    "jest-svg-transformer": "^1.0.0",
+    "jest-styled-components": "^7.0.3",
     "lint-staged": "^10.5.4",
     "nock": "^13.0.11",
-    "node-sass": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "stylelint": "^13.12.0",
-    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^4.0.0",
-    "stylelint-scss": "^3.19.0",
-    "svgo": "^2.2.2",
-    "svgo-loader": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "ts-jest": "^26.5.3",
     "typescript": "^4.2.3"
   },
@@ -67,9 +64,6 @@
   "lint-staged": {
     "*.{ts,tsx,js}": [
       "eslint --fix"
-    ],
-    "*.scss": [
-      "stylelint --fix"
     ]
   },
   "main": "index.js",
@@ -79,12 +73,12 @@
     "build": "rm -rf .next && next build",
     "dev": "next dev",
     "export": "npm run build && next export",
+    "lint": "npm run lint:ts && npm run lint:css && npm run lint:types",
     "lint:ts": "npm run prettier && eslint --fix 'src/**/*.{ts,tsx}'",
-    "lint:scss": "stylelint --fix 'src/**/*.scss'",
+    "lint:css": "stylelint './src/**/*.tsx'",
     "lint:types": "tsc -p . --noEmit",
     "prettier": "prettier  --write **/*.{ts,tsx,js}",
     "start": "NODE_ENV=production PORT=$PORT next start",
-    "svgr": "npx @svgr/cli -d src/components/icons --ignore-existing --icon --typescript public/icons",
     "test": "NODE_ENV=test jest -c test/jest.config.js",
     "test:dev": "NODE_ENV=test jest --watchAll -c test/jest.config.js"
   },
