Add MongoDb and Mongo Express container

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,12 +21,12 @@
       "@components/*": ["./src/components/*"],
       "@containers": ["./src/containers"],
       "@containers/*": ["./src/containers/*"],
-      "@data": ["./src/data"],
-      "@data/*": ["./src/data/*"],
       "@definitions": ["./src/definitions"],
       "@definitions/*": ["./src/definitions/*"],
       "@redux": ["src/redux"],
       "@redux/*": ["src/redux/*"],
+      "@server": ["src/server"],
+      "@server/*": ["src/server/*"],
       "@styles": ["./src/styles"],
       "@styles/*": ["./src/styles/*"],
       "@test": ["./test"],
