--- a/.dockerignore
+++ b/.dockerignore
@@ -72,6 +72,7 @@ typings/
 
 # dotenv environment variables file
 *.env*
+!.env.docker.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
