--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,42 @@ services:
     volumes:
       - .:/usr/app:delegated
       - /usr/app/node_modules
+    depends_on:
+      - mongodb
+    links:
+      - mongodb
+  mongodb:
+    image: mongo:latest
+    env_file:
+      - .env
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME
+      - MONGO_INITDB_ROOT_PASSWORD
+      - MONGO_INITDB_DATABASE
+    ports:
+      - '27017:27017'
+    volumes:
+      - ./.docker/mongodb/mongod.conf:/etc/mongod.conf
+      - ./.docker/mongodb/initdb.d/:/docker-entrypoint-initdb.d/
+      - data:/data/db
+    restart: always
+    command: ['-f', '/etc/mongod.conf']
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express
+    links:
+      - mongodb
+    ports:
+      - 8081:8081
+    env_file:
+      - .env
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongodb
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_INITDB_USERNAME}
+      ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_INITDB_PASSWORD}
+    depends_on:
+      - mongodb
+volumes:
+  data:
