Add new packages

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "@nestjs/common": "^7.6.13",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.4",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/swagger": "^4.8.0",
     "class-transformer": "^0.4.0",
@@ -32,6 +34,9 @@
     "http-status-codes": "^2.1.4",
     "mongoose": "^5.12.1",
     "nest-router": "^1.0.9",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
@@ -44,6 +49,8 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
+    "@types/passport-google-oauth20": "^2.0.7",
+    "@types/passport-jwt": "^3.0.5",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
