--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -23,12 +23,15 @@
       "@application/*": ["./src/application/*"],
       "@config": ["./src/config"],
       "@config/*": ["./src/config/*"],
+      "@constants": ["./src/constants"],
       "@core": ["./src/core"],
       "@core/*": ["./src/core/*"],
       "@database": ["./src/database"],
       "@database/*": ["./src/database/*"],
       "@domain": ["./src/domain"],
       "@domain/*": ["./src/domain/*"],
+      "@infrastructure": ["./src/infrastructure"],
+      "@infrastructure/*": ["./src/infrastructure/*"],
       "@persistence": ["./src/persistence"],
       "@persistence/*": ["./src/persistence/*"]
     },
