--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,18 @@
-NODE_ENV=development # development | test | production
-POST=3000
+# development | test | production
+NODE_ENV=development
+PORT=2500
 
-DATABASE_URL=mongodb://localhost:27017/fin-manager
+# database
+DATABASE_URL=mongodb://mongodb:27017/fin-manager
 DATABASE_NAME=fin-manager
-DATABASE_USER=user
-DATABASE_PASSWORD=user
+DATABASE_USER=fin-manager-usr
+DATABASE_PASSWORD=fin-manager-pwd
+
+# google
+GOOGLE_AUTH_CLIENT_ID=mock-client-id
+GOOGLE_AUTH_CLIENT_SECRET=mock-client-secret
+GOOGLE_AUTH_CALLBACK_URL=http://localhost:2500/api/auth/google/callback
+
+# jwt
+JWT_APP_SECRET=fin-manager-secret
+JWT_EXPIRATION_TIME=3600s
