--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "fin-manager-frontend",
+  "name": "wal-manager",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
     "classnames": "^2.3.1",
+    "firebase": "^8.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.13.8",
@@ -17,8 +19,7 @@
     "eject": "react-scripts eject",
     "format": "prettier --write \"src/**/*.{ts,tsx,scss,css,json}\" ",
     "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix --color",
-    "start": "react-scripts start",
-    "start2": "npm run tailwind:watch & react-scripts start",
+    "start": "npm run tailwind:watch & react-scripts start",
     "tailwind:watch": "NODE_ENV=development postcss src/assets/styles/index.css -o src/assets/styles/tailwind.css -w",
     "tailwind:build": "NODE_ENV=production postcss src/assets/styles/index.css -o src/assets/styles/tailwind.css",
     "test": "react-scripts test",
@@ -69,6 +70,7 @@
     "postcss-cli": "^8.3.1",
     "prettier": "^2.2.1",
     "react-scripts": "4.0.3",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   }
 }
