--- a/package.json
+++ b/package.json
@@ -5,33 +5,50 @@
   "dependencies": {
     "@heroicons/react": "^1.0.1",
     "classnames": "^2.3.1",
-    "firebase": "^8.4.1",
+    "firebase": "^8.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.13.8",
-    "react-router": "^5.2.0",
+    "react-query": "^3.16.0",
     "react-router-dom": "^5.2.0",
-    "tailwindcss": "^2.1.1",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "@craco/craco": "^6.1.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "autoprefixer": "^9",
+    "craco-alias": "^3.0.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^7",
+    "prettier": "^2.3.0",
+    "react-scripts": "4.0.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.1.2"
   },
   "scripts": {
-    "build": "react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
-    "format": "prettier --write \"src/**/*.{ts,tsx,scss,css,json}\" ",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix --color",
-    "start": "npm run tailwind:watch & react-scripts start",
-    "tailwind:watch": "NODE_ENV=development postcss src/assets/styles/index.css -o src/assets/styles/tailwind.css -w",
-    "tailwind:build": "NODE_ENV=production postcss src/assets/styles/index.css -o src/assets/styles/tailwind.css",
-    "test": "react-scripts test",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "prettier": "prettier  --write src/**/*.{ts,tsx,js}",
+    "lint": "yarn prettier && eslint --fix 'src/**/*.{ts,tsx}'"
   },
   "browserslist": {
     "production": [
@@ -44,33 +61,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.1.0",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^12.20.7",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "autoprefixer": "^10.2.5",
-    "concurrently": "^6.0.2",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.2",
-    "postcss": "^8.2.10",
-    "postcss-cli": "^8.3.1",
-    "prettier": "^2.2.1",
-    "react-scripts": "4.0.3",
-    "ts-jest": "^26.5.5",
-    "typescript": "^4.2.4"
   }
 }
