--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@heroicons/react": "^1.0.1",
     "classnames": "^2.3.1",
     "firebase": "^8.6.1",
+    "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.16.0",
