--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/parser": "^4.23.0",
     "autoprefixer": "^9",
     "craco-alias": "^3.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
@@ -42,9 +43,11 @@
     "react-scripts": "4.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "webpack-bundle-analyzer": "^4.4.2"
   },
   "scripts": {
+    "analyze": "cross-env REACT_APP_INTERACTIVE_ANALYZE=1 yarn build",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
