--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@headlessui/react": "^1.2.0",
-    "@heroicons/react": "^1.0.1",
     "classnames": "^2.3.1",
     "firebase": "^8.6.1",
     "query-string": "^7.0.0",
@@ -12,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.16.0",
     "react-router-dom": "^5.2.0",
+    "react-table": "^7.7.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -24,6 +28,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-table": "^7.7.1",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "autoprefixer": "^9",
