--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@headlessui/react": "^1.2.0",
     "classnames": "^2.3.1",
-    "firebase": "^8.6.1",
+    "firebase": "9.0.0-beta.1",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
