Add firebase emulator

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "prettier": "prettier  --write src/**/*.{ts,tsx,js}",
-    "lint": "yarn prettier && eslint --fix 'src/**/*.{ts,tsx}'"
+    "lint": "yarn prettier && eslint --fix 'src/**/*.{ts,tsx}'",
+    "firebase:start": "firebase emulators:start"
   },
   "browserslist": {
     "production": [
