--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,7 @@
   "hosting": {
     "public": "build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "port": 9096,
     "rewrites": [
       {
         "source": "**",
@@ -19,6 +20,9 @@
     },
     "firestore": {
       "port": 9095
+    },
+    "hosting": {
+      "port": 9096
     },
     "ui": {
       "enabled": true,
