--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,8 @@
       "name": "Run All Unit Tests",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceFolder}/node_modules/.bin/jest",
+      "program": "${workspaceFolder}/node_modules/.bin/craco",
+      "args": ["test"],
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}"
     },
@@ -22,8 +23,8 @@
       "name": "Run Current Unit Test",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": ["${file}", "--coverage=false"],
+      "program": "${workspaceFolder}/node_modules/.bin/craco",
+      "args": ["test", "${file}", "--coverage=false"],
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}"
     }
