Add command to test prod env. Join dev commands

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@headlessui/react": "^1.2.0",
+    "concurrently": "^6.2.0",
     "firebase": "9.0.0-beta.2",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
@@ -51,8 +52,10 @@
   },
   "scripts": {
     "analyze": "cross-env REACT_APP_INTERACTIVE_ANALYZE=1 yarn build",
-    "start:firebase": "firebase emulators:start",
-    "start": "craco start",
+    "start:dev:firebase": "firebase emulators:start",
+    "start:dev:app": "craco start",
+    "start:dev": "concurrently -n APP,FIREBASE -c blue,cyan \"yarn start:dev:app\" \"yarn start:dev:firebase\"",
+    "start": "yarn build && yarn start:dev:firebase",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
