--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@headlessui/react": "^1.2.0",
+    "@tailwindcss/forms": "^0.3.3",
     "concurrently": "^6.2.0",
     "firebase": "9.0.0-beta.2",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.8.8",
     "react-router-dom": "^5.2.0",
     "react-table": "^7.7.0",
     "web-vitals": "^1.0.1"
