--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.6.5",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@fontsource/montserrat": "^4.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@headlessui/react": "^1.2.0",
-    "@tailwindcss/forms": "^0.3.3",
     "concurrently": "^6.2.0",
-    "firebase": "9.0.0-beta.2",
+    "firebase": "9.0.0-beta.6",
+    "framer-motion": "^4",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -32,7 +35,6 @@
     "@types/react-table": "^7.7.1",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
-    "autoprefixer": "^9",
     "craco-alias": "^3.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.26.0",
@@ -44,10 +46,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "postcss": "^7",
     "prettier": "^2.3.0",
     "react-scripts": "4.0.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "ts-jest": "^26.5.6",
     "typescript": "^4.1.2",
     "webpack-bundle-analyzer": "^4.4.2"
