--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.8.8",
     "react-router-dom": "^5.2.0",
     "react-table": "^7.7.0",
@@ -31,6 +32,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-table": "^7.7.1",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
