--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.8.8",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.1",
     "react-table": "^7.7.0",
     "web-vitals": "^1.0.1"
   },
@@ -34,6 +35,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^4.0.17",
     "@types/react-table": "^7.7.1",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
