Add redux. Change extensions. - Apply redux to categories and subcategories - Add react sagas - Add reactfire

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -16,10 +16,12 @@
       "@app/hooks/*": ["./hooks/*"],
       "@app/layouts": ["./layouts"],
       "@app/layouts/*": ["./layouts/*"],
-      "@app/routes": ["./routes"],
-      "@app/routes/*": ["./routes/*"],
       "@app/pages": ["./pages"],
       "@app/pages/*": ["./pages/*"],
+      "@app/routes": ["./routes"],
+      "@app/routes/*": ["./routes/*"],
+      "@app/stores": ["./stores"],
+      "@app/stores/*": ["./stores/*"],
       "@app/utils": ["./utils"],
       "@app/utils/*": ["./utils/*"],
       "@lib": ["./lib"],
