--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@reduxjs/toolkit": "^1.6.1",
     "concurrently": "^6.2.0",
-    "firebase": "9.0.0-beta.6",
+    "firebase": "9.0.2",
     "framer-motion": "^4",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.1.2",
     "react-hook-form": "^7.8.8",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.1",
     "react-table": "^7.7.0",
+    "reactfire": "^4.1.1",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -34,9 +38,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.2",
+    "@types/react-helmet-async": "^1.0.3",
+    "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^4.0.17",
     "@types/react-table": "^7.7.1",
+    "@types/redux-saga": "^0.10.5",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "craco-alias": "^3.0.0",
