--- a/package.json
+++ b/package.json
@@ -68,8 +68,9 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
+    "eslint": "eslint --ext .tsx --ext .ts src/ --fix",
     "prettier": "prettier  --write src/**/*.{ts,tsx,js}",
-    "lint": "yarn prettier && eslint --fix 'src/**/*.{ts,tsx}'"
+    "lint": "yarn prettier && yarn eslint"
   },
   "browserslist": {
     "production": [
