Optional google login and sign up

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -8,6 +8,7 @@
       "@assets/*": ["./assets/*"],
       "@components": ["./components"],
       "@components/*": ["./components/*"],
+      "@constants": ["./constants"],
       "@containers": ["./containers"],
       "@containers/*": ["./containers/*"],
       "@hooks": ["./hooks"],
