--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-REACT_APP_SUPABASE_API_URL='insert api key'
+REACT_APP_SUPABASE_API_URL='insert url'
 REACT_APP_SUPABASE_ANON_KEY='insert api key'
-REACT_APP_AUTH_GOOGLE_ENABLED=true
+REACT_APP_AUTH_GOOGLE_ENABLED=false
 REACT_APP_AUTH_SIGN_UP_ENABLED=true
