--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@supabase/supabase-js": "^1.24.0",
+    "date-fns": "^2.25.0",
     "framer-motion": "^4",
     "lodash.camelcase": "^4.3.0",
     "lodash.snakecase": "^4.1.1",
