Add react table and static transactions page

--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,8 @@
   "rules": {
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    // note you must disable the base rule as it can report incorrect errors
+    "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error",
     "react/jsx-sort-props": [
       "error",
@@ -62,7 +64,7 @@
             "position": "before"
           },
           {
-            "pattern": "@(app|lib)/**",
+            "pattern": "@(api|component|containers|hooks|layouts|lib|models|pages|stores|util)/**",
             "group": "internal",
             "position": "after"
           }
