--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^12.1.3",
     "prettier": "^2.4.1",
     "react-scripts": "4.0.3",
     "terser-webpack-plugin": "^4",
@@ -74,7 +76,16 @@
     "eject": "react-scripts eject",
     "eslint": "eslint --ext .tsx --ext .ts src/ --fix",
     "prettier": "prettier  --write src/**/*.{ts,tsx,js}",
-    "lint": "yarn prettier && yarn eslint"
+    "lint": "yarn prettier && yarn eslint",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --ext .tsx --ext .ts src/ --fix"
+    ],
+    "./src/**": [
+      "prettier --write src/**/*.{ts,tsx,js}"
+    ]
   },
   "browserslist": {
     "production": [
