--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.snakecase": "^4.1.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
     "react-hook-form": "^7.20.1",
@@ -39,6 +40,7 @@
     "@types/lodash.snakecase": "^4.1.6",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.35",
+    "@types/react-datepicker": "^4.3.2",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet-async": "^1.0.3",
     "@types/react-router-dom": "^5.3.2",
