--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "web-vitals": "^2.1.2"
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -47,8 +46,8 @@
     "@types/react-table": "^7.7.8",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "craco-alias": "^3.0.0",
-    "cross-env": "^7.0.3",
+    "@vitejs/plugin-react": "^1.1.3",
+    "dotenv": "^10.0.0",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -59,23 +58,19 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.0",
+    "jest": "^27.4.5",
     "lint-staged": "^12.1.3",
     "prettier": "^2.4.1",
-    "react-scripts": "4.0.3",
-    "terser-webpack-plugin": "^4",
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.2",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-dashboard": "^3.3.6",
-    "webpackbar": "^5.0.2"
+    "vite": "^2.7.10",
+    "vite-plugin-svgr": "^0.6.0"
   },
   "scripts": {
-    "analyze": "cross-env ANALYZER_ENABLED=true yarn build",
-    "start:dev": "craco start",
-    "start:prod": "yarn build && npx serve -s build",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject",
+    "start:dev": "vite --open",
+    "start:prod": "yarn build && vite preview",
+    "build": "tsc && vite build",
+    "test": "jest",
     "eslint": "eslint --ext .tsx --ext .ts src/ --fix",
     "prettier": "prettier  --write src/**/*.{ts,tsx,js}",
     "lint": "yarn prettier && yarn eslint",
