--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,32 @@
 {
-  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
+    "baseUrl": "./src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "paths": {
+      "@entities": ["./entities"],
+      "@features": ["./features"],
+      "@pages": ["./pages"],
+      "@shared": ["./shared"]
+    },
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext",
-    "typeRoots": [
-      "./src/types",
-      "./node_modules/@types"
-    ]
+    "types": ["vite/client", "vite-plugin-svgr/client"],
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "useDefineForClassFields": true
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx"
-  ],
+  "include": ["**/*.ts", "**/*.tsx", "./src/types"],
   "exclude": [
     "dist",
     "out",
