--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/compose-function": "^0.0.30",
     "@types/jest": "^27.0.3",
