--- a/package.json
+++ b/package.json
@@ -5,46 +5,46 @@
   "dependencies": {
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.6.0",
-    "@fontsource/montserrat": "^4.5.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/montserrat": "^4.5.10",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@supabase/supabase-js": "^1.35.3",
     "compose-function": "^3.0.3",
     "date-fns": "^2.28.0",
     "framer-motion": "^4.1.17",
     "lodash.camelcase": "^4.3.0",
     "lodash.snakecase": "^4.1.1",
-    "query-string": "^7.0.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
-    "react-datepicker": "^4.5.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.31.1",
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
-    "react-select": "^5.2.1",
-    "react-table": "^7.7.0",
-    "web-vitals": "^2.1.2"
+    "react-select": "^5.3.2",
+    "react-table": "^7.8.0",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/compose-function": "^0.0.30",
-    "@types/jest": "^27.0.3",
-    "@types/lodash.camelcase": "^4.3.6",
-    "@types/lodash.snakecase": "^4.1.6",
+    "@types/jest": "^27.5.1",
+    "@types/lodash.camelcase": "^4.3.7",
+    "@types/lodash.snakecase": "^4.1.7",
     "@types/node": "^12.20.52",
     "@types/react": "^17.0.45",
-    "@types/react-datepicker": "^4.3.2",
-    "@types/react-dom": "^17.0.11",
+    "@types/react-datepicker": "^4.4.1",
+    "@types/react-dom": "^17.0.17",
     "@types/react-helmet-async": "^1.0.3",
-    "@types/react-router-dom": "^5.3.2",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-table": "^7.7.12",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
@@ -60,13 +60,16 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "husky": "^7.0.4",
-    "jest": "^27.4.5",
+    "jest": "^27.5.1",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vite-plugin-svgr": "^0.6.0"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.45"
   },
   "scripts": {
     "start:dev": "vite --open",
