--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "printWidth": 100,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 100,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "trailingComma": "all"
 }
