--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@supabase/supabase-js": "^1.35.3",
+    "chakra-react-select": "^3.3.7",
     "compose-function": "^3.0.3",
     "date-fns": "^2.28.0",
     "framer-motion": "^4.1.17",
@@ -25,7 +26,6 @@
     "react-hook-form": "^7.31.1",
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
-    "react-select": "^5.3.2",
     "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
