--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/montserrat": "^4.5.12",
+    "@tanstack/react-query": "^4.2.3",
     "compose-function": "^3.0.3",
     "framer-motion": "^6",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
     "@types/compose-function": "^0.0.30",
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
