Add models, api and lib

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/montserrat": "^4.5.12",
+    "@supabase/supabase-js": "^2.0.0-rc.8",
     "@tanstack/react-query": "^4.2.3",
     "compose-function": "^3.0.3",
+    "date-fns": "^2.29.2",
     "framer-motion": "^6",
     "next": "12.2.5",
     "react": "18.2.0",
