--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,36 @@
 {
   "extends": ["next/core-web-vitals", "prettier"],
+  "rules": {
+    "import/order": [
+      "error",
+      {
+        "groups": [["external", "builtin"], "internal", ["parent", "index", "sibling", "object"]],
+        "pathGroups": [
+          {
+            "pattern": "(react|next/**)",
+            "group": "external",
+            "position": "before"
+          },
+          {
+            "pattern": "@chakra-ui/**",
+            "group": "builtin",
+            "position": "after"
+          },
+
+          {
+            "pattern": "@(api|app|i18n|layout|lib|models|m|pages|routes|shared|theme)/**",
+            "group": "internal",
+            "position": "after"
+          }
+        ],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ]
+  },
   "settings": {
     "next": {
       "rootDir": "./*"
