Update full layout

--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@supabase/supabase-js": "^2.0.0-rc.8",
     "@tanstack/react-query": "^4.2.3",
+    "@tanstack/react-table": "^8.5.13",
     "compose-function": "^3.0.3",
     "date-fns": "^2.29.2",
     "framer-motion": "^6",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.34.2"
+    "react-hook-form": "^7.34.2",
+    "react-select": "^5.4.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.3.1",
