--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.0.0-rc.8",
     "@tanstack/react-query": "^4.2.3",
     "@tanstack/react-table": "^8.5.13",
+    "chakra-react-select": "^4.2.1",
     "compose-function": "^3.0.3",
     "date-fns": "^2.29.2",
     "framer-motion": "^6",
