--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-SUPABASE_API_URL='insert url'
-SUPABASE_ANON_KEY='insert api key'
-AUTH_GOOGLE_ENABLED=false
-AUTH_SIGN_UP_ENABLED=true
+NEXT_PUBLIC_BASE_URL='http://localhost:3000'
+NEXT_PUBLIC_SUPABASE_API_URL='http://localhost:21000'
+NEXT_PUBLIC_SUPABASE_ANON_KEY='insert api key'
+NEXT_PUBLIC_AUTH_GOOGLE_ENABLED=false
+NEXT_PUBLIC_AUTH_SIGN_UP_ENABLED=true
