--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@tanstack/react-query": "^4.2.3",
     "@tanstack/react-table": "^8.5.13",
     "chakra-react-select": "^4.2.1",
+    "chart.js": "^3.9.1",
     "compose-function": "^3.0.3",
     "date-fns": "^2.29.2",
     "framer-motion": "^6",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
