--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^2.29.2",
     "framer-motion": "^6",
     "next": "12.2.5",
+    "query-string": "^7.1.1",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-datepicker": "^4.8.0",
