--- a/package.json
+++ b/package.json
@@ -1,58 +1,56 @@
 {
   "name": "wal-manager",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install",
+    "dev": "next dev",
     "gen": "supabase gen types typescript --local > src/models/database.schema.ts",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "prepare": "husky install",
+    "prettier": "prettier --write ./src",
+    "start": "next start",
     "supabase": "supabase"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.7",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next/font": "^13.1.5",
-    "@supabase/supabase-js": "^2.4.0",
-    "@tanstack/react-query": "^4.22.0",
-    "@tanstack/react-table": "^8.7.6",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@next/font": "13.1.6",
+    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/supabase-js": "^2.6.0",
+    "@tanstack/react-query": "^4.24.4",
+    "@tanstack/react-table": "^8.7.9",
     "chakra-react-select": "^4.4.3",
-    "chart.js": "^4.1.2",
     "compose-function": "^3.0.3",
-    "date-fns": "^2.29.2",
-    "framer-motion": "^6",
-    "next": "^13.1.1",
-    "query-string": "^7.1.1",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^4.8.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.5",
-    "react-select": "^5.7.0",
-    "uuid": "^9.0.0"
+    "date-fns": "^2.29.3",
+    "framer-motion": "^8.5.5",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-datepicker": "^4.10.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.0",
+    "react-select": "^5.7.0"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.3.1",
+    "@svgr/webpack": "^6.5.1",
     "@types/compose-function": "^0.0.30",
-    "@types/node": "18.7.13",
-    "@types/react": "18.0.17",
-    "@types/react-datepicker": "^4.4.2",
-    "@types/react-dom": "18.0.6",
-    "@types/uuid": "^8.3.4",
-    "eslint": "8.31.0",
-    "eslint-config-next": "^13.1.1",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-datepicker": "^4.8.0",
+    "@types/react-dom": "18.0.10",
+    "encoding": "^0.1.13",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
-    "prettier": "^2.8.2",
-    "supabase": "^1.30.1",
-    "typescript": "4.8.2"
+    "prettier": "^2.8.3",
+    "server-only": "^0.0.1",
+    "supabase": "^1.35.4",
+    "typescript": "4.9.5"
   }
 }
