--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@heroicons/react": "^2.0.16",
+    "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.6",
     "@supabase/auth-helpers-nextjs": "^0.5.4",
     "@supabase/supabase-js": "^2.6.0",
@@ -31,15 +33,18 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
-    "react-select": "^5.7.0"
+    "react-select": "^5.7.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/compose-function": "^0.0.30",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "18.0.10",
+    "autoprefixer": "^10.4.13",
     "encoding": "^0.1.13",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
@@ -47,9 +52,12 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.3",
     "server-only": "^0.0.1",
-    "supabase": "^1.35.4",
+    "supabase": "^1.42.0",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
   }
 }
