--- a/package.json
+++ b/package.json
@@ -14,50 +14,46 @@
     "supabase": "supabase"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.9",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@heroicons/react": "^2.0.16",
-    "@hookform/resolvers": "^2.9.11",
-    "@next/font": "13.1.6",
-    "@supabase/auth-helpers-nextjs": "^0.5.4",
-    "@supabase/supabase-js": "^2.6.0",
-    "@tanstack/react-query": "^4.24.4",
-    "@tanstack/react-table": "^8.7.9",
-    "chakra-react-select": "^4.4.3",
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@heroicons/react": "^2.0.17",
+    "@hookform/resolvers": "^3.0.1",
+    "@supabase/auth-helpers-nextjs": "^0.6.0",
+    "@supabase/supabase-js": "^2.17.0",
+    "@tanstack/react-query": "^4.29.1",
+    "@tanstack/react-table": "^8.8.5",
+    "chakra-react-select": "^4.6.0",
     "compose-function": "^3.0.3",
     "date-fns": "^2.29.3",
     "framer-motion": "^8.5.5",
-    "next": "13.1.6",
+    "next": "13.3.1-canary.4",
     "react": "18.2.0",
-    "react-datepicker": "^4.10.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.0",
-    "react-select": "^5.7.0",
+    "react-hook-form": "^7.43.9",
+    "react-select": "^5.7.2",
     "yup": "^1.0.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
-    "@tailwindcss/forms": "^0.5.3",
     "@types/compose-function": "^0.0.30",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-datepicker": "^4.8.0",
-    "@types/react-dom": "18.0.10",
-    "autoprefixer": "^10.4.13",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.34",
+    "@types/react-datepicker": "^4.10.0",
+    "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "encoding": "^0.1.13",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "prettier-plugin-tailwindcss": "^0.2.3",
+    "lint-staged": "^13.2.1",
+    "prettier": "^2.8.7",
     "server-only": "^0.0.1",
-    "supabase": "^1.42.0",
-    "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5"
+    "supabase": "^1.50.2",
+    "typescript": "5.0.4"
   }
 }
