Migrate icons to components

--- a/src/modules/shared/menu/settings.json
+++ b/src/modules/shared/menu/settings.json
@@ -8,7 +8,7 @@
     "title": "Usuario"
   },
   {
-    "comingSoon": true,
+    "comingSoon": false,
     "exact": false,
     "href": "/settings/categories",
     "icon": "categories",
