Migrate auth to material

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,6 +54,12 @@
           "caseInsensitive": true
         }
       }
+    ],
+    "no-restricted-imports": [
+      "error",
+      {
+        "patterns": ["@mui/*/*/*"]
+      }
     ]
   },
   "settings": {
