--- a/package.json
+++ b/package.json
@@ -21,26 +21,22 @@
     "supabase:reset": "supabase db reset"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.2.0",
-    "@nextui-org/react": "^2.0.19",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/lab": "^5.0.0-alpha.140",
+    "@mui/material": "^5.14.5",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.32.0",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-table": "^8.9.3",
-    "chakra-react-select": "^4.6.0",
     "clsx": "^2.0.0",
-    "date-fns": "^2.30.0",
-    "framer-motion": "^10.15.2",
     "next": "13.4.15",
     "next-international": "^0.9.1",
     "react": "18.2.0",
-    "react-datepicker": "^4.13.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
-    "react-select": "^5.7.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
@@ -48,7 +44,6 @@
     "@tailwindcss/forms": "^0.5.4",
     "@types/node": "18.15.11",
     "@types/react": "18.2.20",
-    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "^5.59.10",
     "@typescript-eslint/parser": "^5.59.10",
